// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionsEditor multiSelectNumeric snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  color: black;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: -28px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <select
      aria-label="select one or more options"
      class="emotion-1"
    >
      <option
        value="1"
      >
        One
      </option>
      <option
        value="2"
      >
        Two
      </option>
      <option
        value="3"
      >
        Three
      </option>
    </select>
    <svg
      class="emotion-2"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor multiSelectObjects snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  color: black;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: -28px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <select
      aria-label="select one or more options"
      class="emotion-1"
    >
      <option
        value="one"
      >
        One
      </option>
      <option
        value="two"
      >
        Two
      </option>
      <option
        value="three"
      >
        Three
      </option>
    </select>
    <svg
      class="emotion-2"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor multiSelectSimple snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  color: black;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: -28px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <select
      aria-label="select one or more options"
      class="emotion-1"
    >
      <option
        value="one"
      >
        one
      </option>
      <option
        value="two"
      >
        two
      </option>
      <option
        value="three"
      >
        three
      </option>
    </select>
    <svg
      class="emotion-2"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor numeric snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  color: black;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: -28px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <select
      aria-label="select one option"
      class="emotion-1"
    >
      <option
        value="1"
      >
        One
      </option>
      <option
        value="2"
      >
        Two
      </option>
      <option
        value="3"
      >
        Three
      </option>
    </select>
    <svg
      class="emotion-2"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor numericCheck snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: 0;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<fieldset
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="One-1"
          name="One"
          type="checkbox"
          value="1"
        />
        <label
          class="emotion-2"
          for="One-1"
        >
          One
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Two-2"
          name="Two"
          type="checkbox"
          value="2"
        />
        <label
          class="emotion-2"
          for="Two-2"
        >
          Two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Three-3"
          name="Three"
          type="checkbox"
          value="3"
        />
        <label
          class="emotion-2"
          for="Three-3"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor numericCheckInline snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: 0;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1>*+* {
  margin-left: 10px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<fieldset
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="One-1"
          name="One"
          type="checkbox"
          value="1"
        />
        <label
          class="emotion-2"
          for="One-1"
        >
          One
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Two-2"
          name="Two"
          type="checkbox"
          value="2"
        />
        <label
          class="emotion-2"
          for="Two-2"
        >
          Two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Three-3"
          name="Three"
          type="checkbox"
          value="3"
        />
        <label
          class="emotion-2"
          for="Three-3"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor numericRadios snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="One-1"
        name="prop"
        type="radio"
        value="1"
      />
      <label
        class="emotion-1"
        for="One-1"
      >
        One
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Two-2"
        name="prop"
        type="radio"
        value="2"
      />
      <label
        class="emotion-1"
        for="Two-2"
      >
        Two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Three-3"
        name="prop"
        type="radio"
        value="3"
      />
      <label
        class="emotion-1"
        for="Three-3"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor numericRadiosInline snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*+* {
  margin-left: 10px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="One-1"
        name="prop"
        type="radio"
        value="1"
      />
      <label
        class="emotion-1"
        for="One-1"
      >
        One
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Two-2"
        name="prop"
        type="radio"
        value="2"
      />
      <label
        class="emotion-1"
        for="Two-2"
      >
        Two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Three-3"
        name="prop"
        type="radio"
        value="3"
      />
      <label
        class="emotion-1"
        for="Three-3"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor objects snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  color: black;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: -28px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <select
      aria-label="select one option"
      class="emotion-1"
    >
      <option
        value="one"
      >
        One
      </option>
      <option
        value="two"
      >
        Two
      </option>
      <option
        value="three"
      >
        Three
      </option>
    </select>
    <svg
      class="emotion-2"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor objectsCheck snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: 0;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<fieldset
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="One-one"
          name="One"
          type="checkbox"
          value="one"
        />
        <label
          class="emotion-2"
          for="One-one"
        >
          One
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Two-two"
          name="Two"
          type="checkbox"
          value="two"
        />
        <label
          class="emotion-2"
          for="Two-two"
        >
          Two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Three-three"
          name="Three"
          type="checkbox"
          value="three"
        />
        <label
          class="emotion-2"
          for="Three-three"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor objectsCheckInline snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: 0;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1>*+* {
  margin-left: 10px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<fieldset
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="One-one"
          name="One"
          type="checkbox"
          value="one"
        />
        <label
          class="emotion-2"
          for="One-one"
        >
          One
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Two-two"
          name="Two"
          type="checkbox"
          value="two"
        />
        <label
          class="emotion-2"
          for="Two-two"
        >
          Two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="Three-three"
          name="Three"
          type="checkbox"
          value="three"
        />
        <label
          class="emotion-2"
          for="Three-three"
        >
          Three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor objectsRadios snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="One-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="emotion-1"
        for="One-one"
      >
        One
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="emotion-1"
        for="Two-two"
      >
        Two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="emotion-1"
        for="Three-three"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor objectsRadiosInline snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*+* {
  margin-left: 10px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="One-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="emotion-1"
        for="One-one"
      >
        One
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="emotion-1"
        for="Two-two"
      >
        Two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="Three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="emotion-1"
        for="Three-three"
      >
        Three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  color: black;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: -28px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  pointer-events: none;
}

<div
    class="emotion-0"
  >
    <select
      aria-label="select one option"
      class="emotion-1"
    >
      <option
        value="one"
      >
        one
      </option>
      <option
        value="two"
      >
        two
      </option>
      <option
        value="three"
      >
        three
      </option>
    </select>
    <svg
      class="emotion-2"
      fill="currentcolor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor simpleCheck snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: 0;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<fieldset
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="one-one"
          name="one"
          type="checkbox"
          value="one"
        />
        <label
          class="emotion-2"
          for="one-one"
        >
          one
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="two-two"
          name="two"
          type="checkbox"
          value="two"
        />
        <label
          class="emotion-2"
          for="two-two"
        >
          two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="three-three"
          name="three"
          type="checkbox"
          value="three"
        />
        <label
          class="emotion-2"
          for="three-three"
        >
          three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor simpleCheckInline snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border: 0;
  padding: 0;
  margin: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1>*+* {
  margin-left: 10px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<fieldset
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div>
        <input
          aria-label="select one or more options"
          checked=""
          id="one-one"
          name="one"
          type="checkbox"
          value="one"
        />
        <label
          class="emotion-2"
          for="one-one"
        >
          one
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="two-two"
          name="two"
          type="checkbox"
          value="two"
        />
        <label
          class="emotion-2"
          for="two-two"
        >
          two
        </label>
      </div>
      <div>
        <input
          aria-label="select one or more options"
          id="three-three"
          name="three"
          type="checkbox"
          value="three"
        />
        <label
          class="emotion-2"
          for="three-three"
        >
          three
        </label>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`OptionsEditor simpleRadios snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="one-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="emotion-1"
        for="one-one"
      >
        one
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="emotion-1"
        for="two-two"
      >
        two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="emotion-1"
        for="three-three"
      >
        three
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsEditor simpleRadiosInline snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>*+* {
  margin-left: 10px;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: unset;
  padding: 3px 0 3px 5px;
  line-height: 18px;
  display: inline-block;
}

<div
    class="emotion-0"
  >
    <div>
      <input
        aria-label="select one option"
        checked=""
        id="one-one"
        name="prop"
        type="radio"
        value="one"
      />
      <label
        class="emotion-1"
        for="one-one"
      >
        one
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="two-two"
        name="prop"
        type="radio"
        value="two"
      />
      <label
        class="emotion-1"
        for="two-two"
      >
        two
      </label>
    </div>
    <div>
      <input
        aria-label="select one option"
        id="three-three"
        name="prop"
        type="radio"
        value="three"
      />
      <label
        class="emotion-1"
        for="three-three"
      >
        three
      </label>
    </div>
  </div>
</DocumentFragment>
`;
